# ChangeLog for app-admin/puppet-module
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Dec 2010; <alunduil@gentoo.org> puppet-module-0.3.0.ebuild:
  Adding facets dependency

  19 Dec 2010; <alunduil@gentoo.org> puppet-module-0.3.0.ebuild:
  Updating puppet dependency version

*puppet-module-0.3.0 (19 Dec 2010)

  19 Dec 2010; <alunduil@gentoo.org> +puppet-module-0.3.0.ebuild:
  Adding puppet-module-0.3.0
