@@ -1,4 +1,4 @@
 DIST puppet-module-0.3.0.gem 98304 RMD160 afbd08a0bdff6577344a14826d05e1ca5340c577 SHA1 a96df0bf3478eec53fdb9261770d798f56149e7c SHA256 a1ecf9dc92c662bc1aae74ae56e24575a13412b99c37689e7917001326d4c581
-EBUILD puppet-module-0.3.0.ebuild 710 RMD160 9df3c714d602921a42c9b47f250038704c23a69e SHA1 ff5c708acb51689e284e1f036184d0cc951ddff0 SHA256 7397155a18d83333feb89d9dea50107ab713c213e59ef113c725c7ebe7f858f8
-MISC ChangeLog 452 RMD160 10b89ea36ff3193e9b4513c8367f01f1dbe3b124 SHA1 2b01515463eeeddf90621051a7f11271016a372f SHA256 6b59752d0889e50c2a22b0eb78cfe8bc6548a6cc055df423d8ab4ab7e0cf5f61
+EBUILD puppet-module-0.3.0.ebuild 720 RMD160 3935e79d7ab5b8a387fd73836774f0efb9c5bf92 SHA1 2d329dedda04167afc62edfc9b7a544442f45e29 SHA256 ae93c7e4ef6e2d5a9702b3a0a82e4890f79f0f883a525fdfe59722eef0ac7e4e
+MISC ChangeLog 556 RMD160 d34b8ecd87c98878f57e9ccca4df39ccb0e1d585 SHA1 5b2bfa7bd32d325ce45d9f1ce8d6abe2d8fc1289 SHA256 2072fe59ccfbd6fdf70f0d0c4f52765318e7ca9c312b75e65470b5427489fad3
 MISC metadata.xml 297 RMD160 dcd033d6792ff12fe189d2171e65a2e3e85757ec SHA1 4e17f752f013e23d55be5ee04dc0d9fe821e6564 SHA256 52deac29ec96a0863fb886de592500bfd2e3e91a5027a4234444a1b862df2690
