@@ -1,0 +1,4 @@
+DIST multipart-post-1.0.gem 7680 RMD160 4cbb4e5455f68bc9797c00564b744a5e9c99a3c6 SHA1 ebe634ee94f8c923c4b77dd6723f604e45c4c772 SHA256 a2ce87a90cfbc968ad6ac1276d7dc071456f2522986fee14c14aec4ddc800c9b
+EBUILD multipart-post-1.0.ebuild 566 RMD160 ae0970bd61d882aab460485af58da8a3279f3513 SHA1 120aedbc925d1f2bc476245482ad13263e7caaa4 SHA256 95c6f55e412fad79f7072090da81a4cdc31a6c7a417853502527098446eda4a4
+MISC ChangeLog 267 RMD160 4577debc332867caa720887258cba3b193dc302e SHA1 540e76da7dcf1c04759b54632f286f7f78a1cc17 SHA256 364b097c310dc8ce4f6515464251ed673a96d13f762b1123ca4d4c3c796e57bf
+MISC metadata.xml 294 RMD160 fb6a5cd1a8b3e3723da41f7848e5d988a8dff849 SHA1 141d3f1ce0045e38d5b5c99d6fb318b72774cfed SHA256 4777dc31ca63bad4c75935dc5b9571f2d7b36a58ad64345222b705e097897616
