@@ -3,18 +3,18 @@
 # $Header: $
 
 EAPI="2"
-USE_RUBY="ruby18"
+USE_RUBY="ruby18 ruby19 ree18"
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_TASK_TEST="spec"
 RUBY_FAKEGEM_EXTRADOC="README*"
-RUBY_FAKEGEM_BINWRAP="puppet-module"
+RUBY_FAKEGEM_BINWRAP="multipart-post"
 
 inherit ruby-fakegem
 
-DESCRIPTION="The Puppet Module Tool creates, installs and searches for modules on the Puppet Forge"
-HOMEPAGE="https://github.com/puppetlabs/puppet-module-tool/blob/master/README.markdown"
+DESCRIPTION="Adds multipart POST capability to net/http"
+HOMEPAGE="https://github.com/nicksieger/multipart-post"
 
-LICENSE="GPL-2"
+LICENSE="MIT"
 SLOT="0"
 IUSE=""
 KEYWORDS="-* ~amd64 ~x86"
@@ -24,10 +24,4 @@ RESTRICT="mirror"
 ruby_add_bdepend "test? (
 		dev-ruby/mocha
 		dev-ruby/rspec:0
-	)
-	dev-ruby/facets
-	dev-ruby/multipart-post"
-
-PDEPEND="${PDEPEND}
-	=app-admin/puppet-0.25*
-	"
+	)"
